# ha-native-audio-agent

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: config.example.yaml
docker/rpi-tts/: .env.example  Dockerfile  benchmark_streaming.py  docker-compose.yml  tts_server.py
docker/vm101/: .env.example  Dockerfile  docker-compose.yml  tts_server.py
docs/: deployment.md  milestone-0-plan.md  research-findings.md  tts-optimization.md  voice_home_agent_handoff.md  wake-word-research.md
scripts/: benchmark_tts_ttfa.py  play_tts_live.py  test_profile.py  test_streaming_gaps.py  test_streaming_jabra.py  test_tts_clean.py
src/ha_native_audio_agent/: __init__.py  __main__.py
src/ha_native_audio_agent/tts/: __init__.py  chunking.py  client.py  emitter.py  live_play.py  pacer.py  player.py  pool.py  protocol.py  supertonic_server.py  synthesizer.py
tests/: test_scaffold.py  test_tts_protocol.py
