[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ha-native-audio-agent"
version = "0.1.0"
description = "Low-latency native audio agent spike for Home Assistant."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "HA Native Audio Agent contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
